# OpenEdge

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/: CameraFragment.kt
gl/: GLRenderer.java
gl/shaders/: fragment.glsl  vertex.glsl
jni/: CMakeLists.txt
jni/native/: edge_detector.cpp  native_bridge.cpp  native_bridge.h
web/: package.json
web/src/: index.html  index.ts  style.css
